Add pictures to html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,105 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back1.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back2.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back3.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back4.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back5.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back6.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back5.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back6.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back1.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back2.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back3.png" alt="" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <img src="images/skin1/front.png" alt="" />
+          </div>
+          <div class="view back-view">
+            <img src="images/skin1/back4.png" alt="" />
+          </div>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
