--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <title>Memory Card Game</title>
      <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="images/favicon/apple-touch-icon.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="images/favicon/favicon-32x32.png"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="images/favicon/favicon-16x16.png"
+  />
+  <link rel="manifest" href="images/favicon/site.webmanifest" />
   </head>
   <body>
     <audio id="backgroundMusic" loop>
@@ -138,5 +156,6 @@
         </div>
       </ul>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
